--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.16",
     "@picocss/pico": "^2.1.1",
+    "bootstrap-utilities": "github:joshmcarthur/bootstrap-utilities",
     "sass": "^1.92.1"
   }
 }
