--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "bin/rails tailwindcss:watch"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.16",
-    "@picocss/pico": "^2.1.1",
-    "bootstrap-utilities": "github:joshmcarthur/bootstrap-utilities",
-    "sass": "^1.92.1"
+    "daisyui": "^5.1.12"
   }
 }
