--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.16",
+    "@stimulus-components/chartjs": "^6.0.1",
+    "chart.js": "^4.5.0",
     "daisyui": "^5.1.12"
   }
 }
