--- a/test/fixtures/jurisdictions.yml
+++ b/test/fixtures/jurisdictions.yml
@@ -1,19 +1,23 @@
 nz_parliament:
   name: NZ Parliament
+  slug: nz-parliament
   jurisdiction_type: parliament
   description: The national parliament of New Zealand
 
 auckland_council:
   name: Auckland Council
+  slug: auckland-council
   jurisdiction_type: local_council
   description: The local government authority for Auckland
 
 wellington_council:
   name: Wellington City Council
+  slug: wellington-city-council
   jurisdiction_type: local_council
   description: The local government authority for Wellington
 
 canterbury_regional:
   name: Canterbury Regional Council
+  slug: canterbury-regional-council
   jurisdiction_type: regional_council
   description: The regional council for Canterbury
