Fix: Copy example.env from the correct path for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,12 +55,11 @@ jobs:
           bundler-cache: true
 
       - name: Copy example env
-        run: cp .env.example .env
+        run: cp example.env .env
 
       - name: Run tests
         env:
           RAILS_ENV: test
-          # REDIS_URL: redis://localhost:6379/0
         run: bin/rails db:test:prepare test test:system
 
       - name: Keep screenshots from failed system tests
