--- a/db/seeds/jurisdictions.yml
+++ b/db/seeds/jurisdictions.yml
@@ -7,3 +7,6 @@
 - name: Wellington City Council
   slug: wellington-city-council
   jurisdiction_type: local_council
+- name: South Wairarapa District Council
+  slug: south-wairarapa-district-council
+  jurisdiction_type: local_council
